--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1929,15 +1929,6 @@ textarea.form-control.is-invalid {
 .mb-4 {
   margin-bottom: 1rem;
 }
-.mb-12 {
-  margin-bottom: 3rem;
-}
-.mt-1 {
-  margin-top: 0.25rem;
-}
-.mb-0 {
-  margin-bottom: 0px;
-}
 .mb-40 {
   margin-bottom: 10rem;
 }
@@ -1947,17 +1938,26 @@ textarea.form-control.is-invalid {
 .mt-12 {
   margin-top: 3rem;
 }
+.mb-12 {
+  margin-bottom: 3rem;
+}
 .mt-auto {
   margin-top: auto;
 }
 .mt-0 {
   margin-top: 0px;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
 .mt-3 {
   margin-top: 0.75rem;
+}
+.mt-1 {
+  margin-top: 0.25rem;
+}
+.mb-0 {
+  margin-bottom: 0px;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .block {
   display: block;
@@ -2001,17 +2001,11 @@ textarea.form-control.is-invalid {
 .h-full {
   height: 100%;
 }
-.h-4 {
-  height: 1rem;
-}
-.h-14 {
-  height: 3.5rem;
-}
 .h-10 {
   height: 2.5rem;
 }
-.h-12 {
-  height: 3rem;
+.h-4 {
+  height: 1rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -2045,9 +2039,6 @@ textarea.form-control.is-invalid {
 }
 .w-4 {
   width: 1rem;
-}
-.w-24 {
-  width: 6rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -2146,6 +2137,9 @@ textarea.form-control.is-invalid {
 .rounded-sm {
   border-radius: 0.125rem;
 }
+.rounded-md {
+  border-radius: 0.375rem;
+}
 .rounded-t {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
@@ -2175,9 +2169,6 @@ textarea.form-control.is-invalid {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-.border-transparent {
-  border-color: transparent;
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -2262,14 +2253,6 @@ textarea.form-control.is-invalid {
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
-}
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -2391,13 +2374,13 @@ textarea.form-control.is-invalid {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -2427,6 +2410,10 @@ textarea.form-control.is-invalid {
 }
 .drop-shadow-sm {
   --tw-drop-shadow: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-md {
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition {
@@ -2516,10 +2503,6 @@ body.swal2-shown > [aria-hidden="true"] {
 .checked\:bg-blue-600:checked {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
-.hover\:border-0:hover {
-  border-width: 0px;
 }
 
 .hover\:bg-blue-700:hover {
@@ -2724,16 +2707,12 @@ body.swal2-shown > [aria-hidden="true"] {
     margin-bottom: 3rem;
   }
 
-  .md\:-mr-4 {
-    margin-right: -1rem;
+  .md\:ml-4 {
+    margin-left: 1rem;
   }
 
   .md\:mr-4 {
     margin-right: 1rem;
-  }
-
-  .md\:ml-4 {
-    margin-left: 1rem;
   }
 
   .md\:w-8\/12 {
@@ -2765,10 +2744,6 @@ body.swal2-shown > [aria-hidden="true"] {
 
 @media (min-width: 1024px) {
 
-  .lg\:ml-20 {
-    margin-left: 5rem;
-  }
-
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -2779,6 +2754,10 @@ body.swal2-shown > [aria-hidden="true"] {
 
   .lg\:ml-auto {
     margin-left: auto;
+  }
+
+  .lg\:ml-20 {
+    margin-left: 5rem;
   }
 
   .lg\:hidden {
